# overtone

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: generate_tx.py  record_rx.py  run_rx.py  simulate_channel.py
src/ofdm_dqpsk/: __init__.py  bits.py  channel.py  config.py  plotting.py  preamble.py  receiver.py  transmitter.py
